...
        android:textColor="#ffff8c75" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/testWord"
        android:id="@+id/questionT"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/questionQuiz"
        android:textColor="#ff9dff6d" />

    <Button
...
