...
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="parse_app_id">l5qhJIZRq3vPDrHTmyzPu3z6IwMjukw7M3h9A8CZ</string>
    <string name="parse_client_key">iLgCs4Z7I71j1L9DIWrjwjkCZ02yc6KuDsYVO60e</string>
    <string name="facebook_app_id">1568762143375890</string>
    <string name="logoText">ME ME INN</string>

    <!-- Main Page Strings -->
    <string name="gotoVocab">Go To Vocabulary</string>
    <string name="gotoUserQuiz">Go To User-created quiz</string>
    <string name="matchFriend">Match with Friends</string>
    <string name="matchLadder">Match in Ladder</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginBtnText">Log In</string>
    <string name="gotoSignUpBtnText">Sign Up for ME ME INN</string>

    <!-- Chapter List Page Strings -->
    <string name="chapter1Text">High Frequency</string>
    <string name="chapter2Text">Medium Frequency</string>
...
    <string name="wordMeaning">Word Meaning</string>
    <string name="prevBtnText">Previous</string>
    <string name="nextBtnText">Next</string>
    <string name="sessionMarker">Try to remember it!(Review this word!)</string>

    <!-- SignUp Page Strings -->
    <string name="usernameSignUpHint">Enter your username</string>
    <string name="passSignUpHint">Enter your password</string>
    <string name="pass2SignUpHint">Confirm your password</string>
    <string name="cancelBtnText">Cancel</string>
    <string name="signUpBtnText">Sign Up</string>

    <!-- Vocab Page Strings -->
    <string name="vocabText">Vocabulary List</string>
    <string name="greText">GRE</string>
...
